# spec42

./: .gitignore  .gitmodules  CHANGELOG.md  CHANGES_SINCE_V0.19.0.md  Cargo.toml  DEVELOPMENT.md  README.md  THIRD_PARTY_NOTICES.md  action.yml  log.txt  output.txt  reference.md
crates/kernel/: Cargo.toml
crates/kernel/src/: lib.rs  validation.rs
crates/kernel/tests/: debt_guardrails.rs  domain_library_layering.rs  parse_validation.rs
crates/kpar/: Cargo.toml
crates/kpar/src/: error.rs  legacy.rs  lib.rs  pack.rs  read.rs  schema.rs
crates/language_service/: Cargo.toml
crates/language_service/src/: code_actions.rs  completion.rs  dto.rs  formatting.rs  keywords.rs  lib.rs  lookup.rs  navigation.rs  outline.rs  presentation_hover.rs  references.rs  rename.rs  symbol.rs  text.rs  uri.rs  workspace.rs  workspace_symbols.rs
crates/language_service/tests/: dependency_guardrails.rs  dto_roundtrip.rs  inmemory_workspace.rs
crates/lsp_server/: Cargo.toml
crates/lsp_server/src/: lib.rs  validation.rs
crates/lsp_server/tests/: debt_guardrails.rs  lsp_integration.rs  parse_validation.rs
crates/semantic_core/: Cargo.toml
crates/semantic_core/docs/: resolution-contract.md  semantic-graph-pipeline.md
crates/semantic_core/src/: lib.rs
crates/semantic_core/tests/: action_body_semantics.rs  activity_graph_semantics.rs  analysis_def_inheritance.rs  analysis_rollup_semantics.rs  analysis_usage_evaluation.rs  analysis_usage_typing.rs  apollo_connection_semantics.rs  assert_constraint_evaluation.rs  attribute_def_quantities.rs  definition_body_semantics.rs  dependency_guardrails.rs  diagnostic_ranges.rs  drone_diagnostics.rs  engineering_units_diagnostics.rs  expose_feature_chains.rs  import_namespace_semantics.rs  interface_body_semantics.rs  item_def_body_semantics.rs  metadata_semantics.rs  mvp_roundtrip_semantics.rs  nested_port_body_semantics.rs  p1_diagnostics.rs  p2_diagnostics_semantics.rs  part_def_body_semantics.rs  prepared_view_parity.rs  quantity_requirement_constraints.rs  ref_relationship_semantics.rs  requirement_body_semantics.rs  requirement_derivation_semantics.rs  resolution_contract.rs  scoped_ibd_general_view_parity.rs  semantic_edge_kinds.rs  state_machine_semantics.rs  unit_graph_materialization.rs  verification_usage_evaluation.rs  view_expose_powersystems_interconnection.rs  view_expose_powersystems_project_body.rs  view_expose_powersystems_shaped.rs  view_expose_stedin.rs  view_expose_stedin_interconnection.rs  (+5 more)
crates/server/: Cargo.toml  build.rs
crates/server/src/: ai_tools.rs  cli.rs  diagrams.rs  domain_libraries.rs  elk_layout.rs  environment.rs  headless_renderer.rs  host_snapshot.rs  legacy_elk_svg.rs  lib.rs  library_bundle.rs  main.rs  reports.rs  stdlib.rs  sysand.rs
crates/server/tests/: api_http.rs  cli_ai_tools.rs  kitchen_timer_check.rs  kpar_domain_libraries_embed_smoke.rs  kpar_stdlib_embed_smoke.rs  mcp_binary.rs  mcp_protocol.rs  mcp_tools.rs  multi_file_check.rs  robot_vacuum_check.rs
crates/software-architecture/: Cargo.toml
crates/software-architecture/src/: lib.rs  software_rpc.rs
crates/spec42_host/: Cargo.toml  README.md  build.rs
crates/spec42_host/examples/: profile_robot_vacuum.rs
crates/spec42_host/src/: catalog.rs  engine.rs  error.rs  lib.rs  robot_vacuum_perf.rs  version.rs
crates/spec42_host/tests/: artifact_metadata_serde.rs  cancellation.rs  comparison_diagnostics.rs  comparison_elements.rs  comparison_identity.rs  comparison_relationships.rs  comparison_serde.rs  comparison_views.rs  deferred_validation.rs  dependency_guardrails.rs  document_changes.rs  host_errors.rs  incremental_benchmark.rs  incremental_fallback.rs  incremental_parity.rs  library_source_resolution.rs  resource_limits.rs  robot_vacuum_performance.rs  robot_vacuum_snapshot.rs  snapshot_single_build.rs
crates/sysml_diagnostics/: Cargo.toml
crates/sysml_diagnostics/src/: document.rs  engine.rs  engine_impl.rs  helpers.rs  kind_rules.rs  lib.rs  pending_relationship_diagnostics.rs  relationship_endpoint_messages.rs  shared_rules.rs  types.rs
crates/sysml_diagnostics/tests/: dependency_guardrails.rs
crates/sysml_model/: Cargo.toml
crates/sysml_model/docs/: document-uri-contract.md
crates/sysml_model/src/: lib.rs
crates/sysml_model/tests/: action_body_semantics.rs  activity_graph_semantics.rs  analysis_def_inheritance.rs  analysis_incomplete_definition_suppression.rs  analysis_rollup_semantics.rs  analysis_usage_typing.rs  (+47 more)
crates/sysml_tokens/: Cargo.toml
crates/workspace_session/: Cargo.toml
elk-rust/: .gitignore  Cargo.toml  README.md
elk-rust/docs/: core-parity-contract.md  elk-graph-json-format.md  elk-graph-json-mapping.md  interconnection-dense-delta-notes.md  next-algorithm-to-port.md  parity-matrix.md
elk-rust/scripts/: bootstrap-jdk17.ps1  bootstrap-maven.ps1  build-elk-java.ps1  run-elk-java-json.ps1  run-elk-java-json.sh  run-elk-parity.ps1  vendor-elk-java.ps1
plugins/: Cargo.toml
plugins/src/: lib.rs
semantic-model/: Cargo.toml
semantic-model/src/: ast_util.rs  graph.rs  graph_builder.rs  graph_builder_requirement_subjects.rs  import_resolution.rs  lib.rs  model.rs  reference_resolution.rs  relationships.rs  root_element.rs  workspace_uri.rs
semantic-model/tests/: cross_document_typing.rs
server/: Cargo.toml  build.rs
server/docs/: semantic-checks.md
server/src/: ast_util.rs  cli.rs  default_diagram_providers.rs  dto.rs  environment.rs  ibd.rs  lib.rs  main.rs  main_thin.rs  model.rs  semantic_checks.rs  stdlib.rs  sysml_model.rs  util.rs
server/tests/: parse_validation.rs
spec42-core/: Cargo.toml
spec42-core/benches/: parse_scan.rs
spec42-core/src/: analysis.rs  bench.rs  config.rs  default_diagram_providers.rs  diagram_types.rs  dto.rs  ibd.rs  lib.rs  lsp_server.rs  semantic_checks.rs  sysml_model.rs  util.rs  validation.rs
spec42-core/tests/: domain_library_layering.rs  lsp_integration.rs  parse_validation.rs
sysml-diagrams/: Cargo.toml
sysml-diagrams/src/: general_view.rs  interconnection_view.rs  lib.rs  shared.rs  types.rs
sysml-diagrams/tests/: render_tests.rs
(+1341 files in other folders)
