[workspace]
resolver = "2"
members = [
  "crates/diagram_core",
  "crates/kernel",
  "crates/server",
  "crates/semantic_core",
  "crates/sysml_semantic_tokens",
]

[workspace.package]
version = "0.30.0"
edition = "2021"
authors = ["Elan8"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
rmcp = { version = "0.9", features = ["server"] }
schemars = { version = "1.1", features = ["derive"] }
petgraph = "0.8"
sysml-v2-parser =  "0.25.2"
