[workspace]
resolver = "2"
members = [
  "crates/diagram",
  "crates/language_service",
  "crates/lsp_server",
  "crates/kpar",
  "crates/server",
  "crates/sysml_model",
  "crates/workspace",
  "crates/sysml_tokens",
  "crates/workspace_session",
]

[workspace.package]
version = "0.44.4"
edition = "2021"
authors = ["Elan8"]
license = "MIT"

[profile.profiling]
inherits = "release"
debug = true

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
rmcp = { version = "0.9", features = ["server"] }
schemars = { version = "1.1", features = ["derive"] }
petgraph = { version = "0.8", features = ["serde-1"] }
sysml-v2-parser = { path = "../sysml-v2-parser", features = ["serde"] }
ts-rs = { version = "11", features = ["serde-compat", "serde-json-impl"] }
