[workspace]
members = [
    "crates/elk-core",
    "crates/elk-graph",
    "crates/elk-layered",
    "crates/elk-testkit",
    "crates/elk-graph-json",
    "crates/elk-meta",
    "crates/elk-service",
    "crates/elk-alg-common",
    "crates/elk-tree",
    "crates/elk-rectpacking",
    "crates/elk-topdownpacking",
    "crates/elk-libavoid",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"
version = "0.1.0"
authors = ["Elan8"]

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
