[package]
name = "plugins"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Plugin crate for optional Spec42 add-ons"

[lib]
name = "plugins"

[dependencies]
glob = "0.3"
serde_json = { workspace = true }
tempfile = "3.27.0"
toml = "0.8"
tower-lsp = "0.20"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
walkdir = "2"
