[package]
name = "semantic-model"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Pure semantic graph model for SysML v2 documents (petgraph)"

[dependencies]
sysml-parser = { git = "https://github.com/elan8/sysml-parser", rev = "11aeaca228f16fe2672aa9713edf1fd53cb321a8" }
tower-lsp = "0.20"
petgraph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
