[package]
name = "semantic-model"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Pure semantic graph model for SysML v2 documents (petgraph)"

[dependencies]
sysml-v2-parser = "0.1.0"
tower-lsp = "0.20"
petgraph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
