[package]
name = "spec42"
version = "0.16.0"
edition = "2021"
description = "Language server for SysML v2 (LSP over stdio)"

[[bin]]
name = "spec42"
path = "src/main.rs"

[dependencies]
spec42-core = { path = "../spec42-core" }
tokio = { version = "1", features = ["full"] }
serde_json = { workspace = true }

[dev-dependencies]
sysml-v2-parser = "0.1.0"
serde_json = { workspace = true }
tempfile = "3"
url = "2"
