[package]
name = "spec42"
version = "0.21.0"
edition = "2021"
description = "Language server for SysML v2 (LSP over stdio)"
build = "build.rs"

[[bin]]
name = "spec42"
path = "src/main.rs"

[features]
default = ["embed-stdlib"]
embed-stdlib = []

[build-dependencies]
sha2 = "0.10"
ureq = { version = "2", default-features = true }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dependencies]
kernel = { path = "../spec42-core" }
tokio = { version = "1", features = ["full"] }
serde_json = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
directories = "5"
toml = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }
tower-lsp = "0.20"

[dev-dependencies]
sysml-v2-parser = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
url = "2"
