[package]
name = "sysml-diagrams"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
elk-core = { workspace = true }
elk-graph = { workspace = true }
elk-layered = { workspace = true }
