[package]
name = "kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for Spec42 LSP server: semantic model, DTOs, extension traits"

[lib]
name = "kernel"

[dependencies]
plugins = { path = "../plugins" }
sysml-v2-parser = { workspace = true }
petgraph = { workspace = true }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
tempfile = "3.27.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
toml = "0.8"
glob = "0.3"

[dev-dependencies]
# Used by LSP integration tests when constructing `file://` URIs.
url = "2"


