[package]
name = "spec42"
version = "0.31.0"
edition = "2021"
description = "Language server for SysML v2 (LSP over stdio)"
build = "build.rs"

[[bin]]
name = "spec42"
path = "src/main.rs"

[[bin]]
name = "spec42-mcp"
path = "src/bin/spec42_mcp.rs"

[lib]
name = "spec42"
path = "src/lib.rs"

[features]
default = ["embed-stdlib", "embed-domain-libraries"]
embed-stdlib = []
embed-domain-libraries = []

[build-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dependencies]
kernel = { path = "../kernel" }
semantic_core = { path = "../semantic_core" }
tokio = { version = "1", features = ["full"] }
serde_json = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
directories = "5"
toml = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }
tower-lsp = "0.20"
rmcp = { workspace = true }
schemars = { workspace = true }
rquickjs = "0.11"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde_yaml = "0.9"

[dev-dependencies]
sysml-v2-parser = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
url = "2"
rmcp = { workspace = true, features = ["client", "server", "transport-child-process"] }
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
