[package]
name = "elk-service"
edition = "2024"
license = "MIT"
rust-version = "1.85"
version = "0.1.0"

[dependencies]
elk-core = { path = "../elk-core" }
elk-graph = { path = "../elk-graph" }
elk-meta = { path = "../elk-meta" }
elk-layered = { path = "../elk-layered" }
elk-tree = { path = "../elk-tree" }
elk-rectpacking = { path = "../elk-rectpacking" }
elk-topdownpacking = { path = "../elk-topdownpacking" }
elk-libavoid = { path = "../elk-libavoid" }

[dev-dependencies]
elk-graph-json = { path = "../elk-graph-json" }

