[package]
name = "elk-testkit"
edition = "2024"
license = "MIT"
rust-version = "1.85"
version = "0.1.0"

[dependencies]
elk-core = { path = "../elk-core" }
elk-layered = { path = "../elk-layered" }
elk-graph-json = { path = "../elk-graph-json" }
elk-graph = { path = "../elk-graph" }

[dev-dependencies]
criterion = "0.5"
proptest = "1.6"

[[bench]]
name = "layered"
harness = false
