[package]
name = "elk-testkit"
edition = "2024"
license = "MIT"
rust-version = "1.85"
version = "0.1.0"

[dependencies]
elk-core = { path = "../elk-core" }
elk-graph = { path = "../elk-graph" }
elk-graph-json = { path = "../elk-graph-json" }
elk-layered = { path = "../elk-layered" }
elk-service = { path = "../elk-service" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = "0.5"
proptest = "1.6"
serde_json = "1"

## Benchmarks are currently not checked in for this workspace.
## Keep this crate testable by not declaring missing benches.
